# biophysics_project

./: .gitignore  Brian's code - Comparison correlations - D10.ipynb  CMakeLists.txt  Correlations.py  Instructions.txt  README.md  chemo.cpp  chemo.h  display.cpp  display.py  fonctions.cpp  fonctions.h  graphs.py  main.cpp  methods.py  prisededonnees.cpp  proba  read_flux.py  receptor.cpp  receptor.h  save_flux.py
Brian M1 Internship/: Brian's code - Calculation of g(r) - for simulations.ipynb  README.md  fonctions.cpp  fonctions.h  nageur.cpp  nageur.h  visualisation.cpp
data/: nbr_absorption.txt  param.csv  rec.txt  save_abs_speed.txt  save_abs_speed_1.txt  x.txt  y.txt
